# invoiceq-core

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
include/: filereader.h  recognition.h  svm-predict.h  svm.h  textlocation.h  utility.h
lib/linux_sharelib/: libopencv_core.so.2.3.1  libopencv_highgui.so.2.3.1  libopencv_imgproc.so.2.3.1
lib/mac_sharelib/: libopencv_core.2.3.1.dylib  libopencv_features2d.2.3.1.dylib  libopencv_highgui.2.3.1.dylib  libopencv_imgproc.2.3.1.dylib
rc/: model  scale_para
src/: CMakeLists.txt  filereader.cpp  main.cpp  recognition.cpp  svm-predict.cpp  svm.cpp  textlocation.cpp  utility.cpp
